--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,95 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'Bookish';
+  src: url('../Bookish-Book.woff') format('woff');
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* @font-face {
+  font-family: 'IBM';
+  src: url('../Mono.ttf') format('ttf');
+} */
+
+html {
+  font-family: 'Bookish';
+  font-style: normal;
+  font-weight: normal;
 }
 
-* {
-  box-sizing: border-box;
+button {
+  content: '';
+  height: 2rem;
+  width: 6rem;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 6px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+div::selection {
+  background: transparent;
+}
+
+h1::selection, h2::selection, a::selection, p::selection, 
+button::selection, li::selection, td::selection, img::selection,
+option::selection, label::selection, iframe::selection {
+  background: rgba(205,237,211,0.5);
+}
+
+option::selection {
+  background: transparent;
+}
+
+input[type='email'] {
+  padding: 8px 0;
+  border-bottom: 1.3px solid;
+}
+
+/* [type=checkbox] {
+  display: none;
+} */
+
+input[type='checkbox'] {
+  position: relative;
+  width: 1rem;
+  height: 1rem;
+  padding: 0 0;
+  appearance: none;
+  background-color: #fff;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px solid;
+}
+
+label {
+  cursor: pointer;
+}
+
+input:focus {
+  outline: none;
+}
+
+option {
+  padding: 8px 0;
+  border-bottom: 1.3px solid;
+}
+
+select {
+  width: 100%;
+  padding: 8px 0;
+  border-bottom: 1.3px solid;
+}
+
+select:focus {
+  outline: none;
+}
+
+ul li {
+  padding: .5rem .7rem;
+  border-radius: .5rem;
+}
+
+ul li:hover {
+  background-color: rgba(198, 185, 147, 0.5);
+  text-decoration: underline;
 }
